--- a/portfolio/src/app/components/about/about.component.html
+++ b/portfolio/src/app/components/about/about.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row align-items-top">
-    <div class="col-4 d-flex mt-4 justify-content-center">
+    <div class="col-3 d-flex mt-4 justify-content-center">
       <img
         [src]="persons.profileImage"
         width="180"
         height="180"
-        class="rounded border border-dark"
+        class="rounded border border-dark shadow"
         alt="Foto perfil"
       />
     </div>
 
-    <div class="col-6 d-flex mt-4 align-items-center">
+    <div class="col-7 d-flex mt-4 align-items-center">
       <p>
         <span class="titles">Acerca de</span><br />
         <span class="short">Soy </span
