--- a/portfolio/src/app/components/header/header.component.html
+++ b/portfolio/src/app/components/header/header.component.html
@@ -2,11 +2,13 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col">
-        <img
-          src="assets/Img/logo_argentina_programa.png"
-          alt="Logo Argentina programa"
-          width="120"
-        />
+        <a href="https://argentinaprograma.inti.gob.ar/">
+          <img
+            src="assets/Img/logo_argentina_programa.png"
+            alt="Logo Argentina programa"
+            width="120"
+          />
+        </a>
         <div class="yo_programo">#YoProgramo</div>
       </div>
       <div class="col">
@@ -27,11 +29,21 @@
         >
           Logout
         </button>
-        <i class="bi bi-facebook float-end social px-1"></i>
-        <i class="bi bi-instagram float-end social px-1"></i>
-        <i class="bi bi-youtube float-end social px-1"></i>
-        <i class="bi bi-linkedin float-end social px-1"></i>
-        <i class="bi bi-github float-end social px-1"></i>
+        <a href="https://www.facebook.com/adrian.fernandezfazio/"
+          ><i class="bi bi-facebook float-end social px-1"></i
+        ></a>
+        <a href="https://www.instagram.com/adrianfernandezfazio/">
+          <i class="bi bi-instagram float-end social px-1"></i>
+        </a>
+        <a href="https://www.youtube.com/c/AdrianFernandezFazio"
+          ><i class="bi bi-youtube float-end social px-1"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/adrianfernandezfazio/"
+          ><i class="bi bi-linkedin float-end social px-1"></i
+        ></a>
+        <a href="https://github.com/elciclon"
+          ><i class="bi bi-github float-end social px-1"></i
+        ></a>
       </div>
     </div>
     <img
