--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -114,10 +114,11 @@ p {
 }
 
 .skill {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bold;
   color: rgba(243, 237, 237, 0.925);
   text-align: center;
+  
 }
 
 .vertical-line {
@@ -196,120 +197,93 @@ p {
 
 /* Progress bar */
 
-.progress {
-  width: 150px;
-  height: 150px !important;
-  float: left;
-  line-height: 150px;
-  background: none;
-  margin: 20px;
-  box-shadow: none;
-  position: relative;
-}
-.progress:after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  border: 12px solid #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-.progress > span {
-  width: 50%;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  z-index: 1;
-}
-.progress .progress-left {
-  left: 0;
-}
-.progress .progress-bar {
-  width: 100%;
-  height: 100%;
-  background: none;
-  border-width: 12px;
-  border-style: solid;
-  position: absolute;
-  top: 0;
-}
-.progress .progress-left .progress-bar {
-  left: 100%;
-  border-top-right-radius: 80px;
-  border-bottom-right-radius: 80px;
-  border-left: 0;
-  -webkit-transform-origin: center left;
-  transform-origin: center left;
-}
-.progress .progress-right {
-  right: 0;
-}
-.progress .progress-right .progress-bar {
-  left: -100%;
-  border-top-left-radius: 80px;
-  border-bottom-left-radius: 80px;
-  border-right: 0;
-  -webkit-transform-origin: center right;
-  transform-origin: center right;
-  animation: loading-1 1.8s linear forwards;
-}
-.progress .progress-value {
-  width: 90%;
-  height: 90%;
-  border-radius: 50%;
-  background: 022b2c;
-  font-size: 24px;
-  color: #fff;
-  line-height: 135px;
-  text-align: center;
-  position: absolute;
-  top: 5%;
-  left: 5%;
-}
-.progress.orange .progress-bar {
-  border-color: rgb(221, 117, 32);
-}
-.progress.orange .progress-left .progress-bar {
-  animation: loading-2 1.5s linear forwards 1.8s;
+.dashboard {
+  display: flex;
 }
 
-.progress.green .progress-bar {
-  border-color: rgb(7, 87, 24);
-}
-.progress.green .progress-left .progress-bar {
-  animation: loading-2 1.5s linear forwards 1.8s;
+.bg {
+  fill: none;
+  stroke-width: 10px;
+  stroke: #1A2C34;
 }
 
-@keyframes loading-1 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+svg {
+  width: 114px;
+  height: 114px;
+  margin: 1em;
+}
+
+
+[class^="meter-"] {
+  fill: none;
+  stroke-width: 10px;
+  stroke-linecap: round;
+  transform: rotate(-90deg);
+  transform-origin: 50% 50%;
+  
+}
+
+.meter-1 {
+  stroke-dasharray: 360;
+  stroke-dashoffset: 180;
+  stroke: rgb(38, 38, 202);
+  animation: progress-1 1s ease-out;
+}
+.meter-2 {
+  stroke: rgb(38, 38, 202);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 108;
+  animation: progress-2 .75s ease-out;
+}
+.meter-3 {
+  stroke: rgb(38, 38, 202);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 0;
+  animation: progress-3 .5s ease-out;
+}
+
+.meter-1-green {
+  stroke-dasharray: 360;
+  stroke-dashoffset: 180;
+  stroke: rgb(20, 124, 29);
+  animation: progress-1 1s ease-out;
+}
+.meter-2-green {
+  stroke: rgb(20, 124, 29);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 108;
+  animation: progress-2 .75s ease-out;
+}
+.meter-3-green {
+  stroke: rgb(20, 124, 29);
+  stroke-dasharray: 360;
+  stroke-dashoffset: 0;
+  animation: progress-3 .5s ease-out;
+}
+
+@keyframes progress-1 {
+    from {
+        stroke-dashoffset: 360;
+    }
+    to {
+        stroke-dashoffset: 180;
+    }
+}
+
+@keyframes progress-2 {
+  from {
+    stroke-dashoffset: 360;
   }
-  100% {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
+  to {
+    stroke-dashoffset: 108;
   }
 }
-@keyframes loading-2 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+
+@keyframes progress-3 {
+  from {
+    stroke-dashoffset: 360;
   }
-  100% {
-    -webkit-transform: rotate(144deg);
-    transform: rotate(144deg);
-  }
-}
-@keyframes loading-3 {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
+  to {
+    stroke-dashoffset: 0;
   }
 }
